# chiriin

./: .coveragerc  .gitignore  README.md  SUBTREE_USAGE.md  __init__.py  _drawer.py  config.py  drawer.py  pyproject.toml  pytest.ini
.devcontainer/: Dockerfile  requirements.txt
chiriin/: _drawer.py  config.py  features.py  formatter.py  geometries.py  mag.py  mesh.py  paper.py  semidynamic.py  tile.py  utils.py  web.py
chiriin/tests/: test_drawer.py  test_formatter.py  test_geometries.py  test_paper.py  test_semidynamic.py  test_tile.py  test_utils.py  test_web.py
chiriin/tests/coverage_report/: report.html
chiriin/tests/data/: prefecture_pnt.csv
