[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chiriin"
version = "1.0.0"
description = "国土地理院のAPIやパラメーターファイルを利用するモジュール"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "shapely",
    "pyproj",
    "matplotlib",
    "requests",
    "pillow"
]

[tool.ruff]
exclude = [
    ".venv",
    ".ruff_cache"
]
line-length = 90
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = [
    "F", # Flake8
    "B", # Black
    "I", # isort
    "E", # error
    "W"  # warning
]
ignore = []
fixable = ["ALL"]